objects/RecordType_Mapping__c.object
<CustomObject>
    <fields>
        <fullName>Destination_RecordType_Name__c</fullName>
        <label>Destination RecordType Name</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Migration_Rule__c</fullName>
        <label>Migration Rule</label>
        <referenceTo>Migration_Rule__c</referenceTo>
        <relationshipLabel>RecordType Mappings</relationshipLabel>
        <relationshipName>RecordType_Mappings</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Org_Credential__c</fullName>
        <label>Org Credential</label>
        <referenceTo>Settings__c</referenceTo>
        <relationshipLabel>RecordType Mappings</relationshipLabel>
        <relationshipName>RecordType_Mappings</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Source_RecordType_Name__c</fullName>
        <label>Source RecordType Name</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>RecordType Mapping</label>
    <nameField>
        <displayFormat>RTM-{00000}</displayFormat>
        <label>RecordType Mapping Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>RecordType Mappings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>